--- a/public/legal-notice/css/styles.css
+++ b/public/legal-notice/css/styles.css
@@ -729,10 +729,6 @@ video {
   display: grid;
 }
 
-.list-item {
-  display: list-item;
-}
-
 .hidden {
   display: none;
 }
@@ -863,10 +859,6 @@ video {
   resize: both;
 }
 
-.list-inside {
-  list-style-position: inside;
-}
-
 .list-outside {
   list-style-position: outside;
 }
@@ -965,34 +957,22 @@ video {
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
-.space-y-14 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
-}
-
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
-.space-y-20 > :not([hidden]) ~ :not([hidden]) {
+.space-y-14 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(5rem * var(--tw-space-y-reverse));
+  margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
 }
 
 .space-y-16 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(4rem * var(--tw-space-y-reverse));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-auto {
@@ -1179,11 +1159,6 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-64 {
-  padding-left: 16rem;
-  padding-right: 16rem;
-}
-
 .px-52 {
   padding-left: 13rem;
   padding-right: 13rem;
@@ -1289,36 +1264,32 @@ video {
   padding-top: 4rem;
 }
 
-.pl-20 {
-  padding-left: 5rem;
-}
-
 .pt-20 {
   padding-top: 5rem;
 }
 
-.pl-32 {
-  padding-left: 8rem;
-}
-
-.pl-64 {
-  padding-left: 16rem;
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
 .pl-10 {
   padding-left: 2.5rem;
 }
 
-.pl-8 {
-  padding-left: 2rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 
-.pl-4 {
-  padding-left: 1rem;
+.pr-\[10\%\] {
+  padding-right: 10%;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
+.pr-\[5\%\] {
+  padding-right: 5%;
+}
+
+.pl-\[5\%\] {
+  padding-left: 5%;
 }
 
 .text-left {
@@ -1369,11 +1340,6 @@ video {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-semibold {
@@ -1804,6 +1770,25 @@ video {
     align-items: flex-end;
   }
 
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .md\:pl-1 {
     padding-left: 0.25rem;
   }
@@ -1830,6 +1815,18 @@ video {
 
   .md\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .md\:pl-10 {
+    padding-left: 2.5rem;
+  }
+
+  .md\:pt-1 {
+    padding-top: 0.25rem;
+  }
+
+  .md\:pl-\[5\%\] {
+    padding-left: 5%;
   }
 
   .md\:text-left {
@@ -1989,11 +1986,6 @@ video {
     padding-right: 0px;
   }
 
-  .xl\:px-52 {
-    padding-left: 13rem;
-    padding-right: 13rem;
-  }
-
   .xl\:pl-10 {
     padding-left: 2.5rem;
   }
@@ -2005,13 +1997,6 @@ video {
   .xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-}
-
-@media (min-width: 1536px) {
-  .\32xl\:px-52 {
-    padding-left: 13rem;
-    padding-right: 13rem;
   }
 }
 
