--- a/public/faq/css/styles.css
+++ b/public/faq/css/styles.css
@@ -637,18 +637,6 @@ video {
   left: 7.5rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
 .z-20 {
   z-index: 20;
 }
@@ -667,24 +655,9 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
-}
-
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
 }
 
 .mt-6 {
@@ -707,44 +680,20 @@ video {
   margin-top: auto;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-\[10px\] {
-  margin-top: 10px;
-}
-
-.mt-\[100px\] {
-  margin-top: 100px;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 
-.box-border {
-  box-sizing: border-box;
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .inline {
@@ -753,6 +702,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
 }
 
 .grid {
@@ -795,8 +748,16 @@ video {
   height: 1px;
 }
 
-.h-2 {
-  height: 0.5rem;
+.h-4 {
+  height: 1rem;
+}
+
+.h-\[4\.5rem\] {
+  height: 4.5rem;
+}
+
+.h-3 {
+  height: 0.75rem;
 }
 
 .h-10 {
@@ -807,132 +768,32 @@ video {
   height: 5rem;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-\[10rem\] {
-  height: 10rem;
-}
-
-.h-\[100rem\] {
-  height: 100rem;
-}
-
-.h-\[50rem\] {
-  height: 50rem;
-}
-
-.h-\[20rem\] {
-  height: 20rem;
-}
-
-.h-\[15rem\] {
-  height: 15rem;
-}
-
-.h-\[14rem\] {
-  height: 14rem;
-}
-
-.h-\[13\.5rem\] {
-  height: 13.5rem;
-}
-
-.h-\[13rem\] {
-  height: 13rem;
-}
-
-.h-\[17rem\] {
-  height: 17rem;
-}
-
-.h-\[18rem\] {
-  height: 18rem;
-}
-
-.h-\[19rem\] {
-  height: 19rem;
-}
-
-.h-\[15vw\] {
-  height: 15vw;
-}
-
-.h-\[5vw\] {
-  height: 5vw;
-}
-
-.h-\[4vw\] {
-  height: 4vw;
-}
-
-.h-\[4\.4vw\] {
-  height: 4.4vw;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-\[4rem\] {
-  height: 4rem;
-}
-
-.h-\[5rem\] {
-  height: 5rem;
-}
-
-.h-\[4\.2rem\] {
-  height: 4.2rem;
-}
-
-.h-\[4\.3rem\] {
-  height: 4.3rem;
-}
-
-.h-\[4\.4rem\] {
-  height: 4.4rem;
-}
-
-.h-\[4\.7rem\] {
-  height: 4.7rem;
-}
-
-.h-\[4\.5rem\] {
-  height: 4.5rem;
-}
-
 .max-h-\[17rem\] {
   max-height: 17rem;
 }
 
 .min-h-\[4rem\] {
   min-height: 4rem;
+}
+
+.min-h-\[10rem\] {
+  min-height: 10rem;
+}
+
+.min-h-\[5rem\] {
+  min-height: 5rem;
+}
+
+.min-h-\[2rem\] {
+  min-height: 2rem;
+}
+
+.min-h-\[3rem\] {
+  min-height: 3rem;
+}
+
+.min-h-\[4\.5rem\] {
+  min-height: 4.5rem;
 }
 
 .w-screen {
@@ -967,18 +828,6 @@ video {
   width: 90%;
 }
 
-.w-\[75\%\] {
-  width: 75%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
 .w-4 {
   width: 1rem;
 }
@@ -987,102 +836,44 @@ video {
   width: 0.75rem;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-max {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-}
-
 .w-\[100\%\] {
   width: 100%;
 }
 
-.w-\[10\%\] {
-  width: 10%;
+.w-\[75\%\] {
+  width: 75%;
 }
 
-.w-\[60\%\] {
-  width: 60%;
+.w-auto {
+  width: auto;
 }
 
-.w-\[80\%\] {
-  width: 80%;
+.w-10 {
+  width: 2.5rem;
 }
 
-.w-\[95\%\] {
-  width: 95%;
+.w-\[30\%\] {
+  width: 30%;
 }
 
-.w-\[95vw\] {
-  width: 95vw;
+.w-\[28\%\] {
+  width: 28%;
 }
 
-.w-\[100vw\] {
-  width: 100vw;
+.w-\[29\%\] {
+  width: 29%;
 }
 
-.w-\[60vw\] {
-  width: 60vw;
+.w-20 {
+  width: 5rem;
 }
 
-.w-\[80vw\] {
-  width: 80vw;
+.w-36 {
+  width: 9rem;
 }
 
-.w-\[85vw\] {
-  width: 85vw;
-}
-
-.w-\[10px\] {
-  width: 10px;
-}
-
-.w-\[30px\] {
-  width: 30px;
-}
-
-.w-\[20px\] {
-  width: 20px;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[25px\] {
-  width: 25px;
-}
-
-.w-\[10rem\] {
-  width: 10rem;
-}
-
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[30rem\] {
-  width: 30rem;
-}
-
-.w-\[25rem\] {
-  width: 25rem;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-px {
-  width: 1px;
+.w-44 {
+  width: 11rem;
 }
 
 .max-w-full {
@@ -1097,6 +888,14 @@ video {
   max-width: 32rem;
 }
 
+.max-w-\[100\%\] {
+  max-width: 100%;
+}
+
+.max-w-\[50\%\] {
+  max-width: 50%;
+}
+
 .-translate-y-2\/4 {
   --tw-translate-y: -50%;
   transform: var(--tw-transform);
@@ -1104,11 +903,6 @@ video {
 
 .rotate-180 {
   --tw-rotate: 180deg;
-  transform: var(--tw-transform);
-}
-
-.rotate-90 {
-  --tw-rotate: 90deg;
   transform: var(--tw-transform);
 }
 
@@ -1169,6 +963,10 @@ video {
   list-style-type: disc;
 }
 
+.list-decimal {
+  list-style-type: decimal;
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -1181,16 +979,8 @@ video {
   flex-direction: column-reverse;
 }
 
-.place-content-center {
-  place-content: center;
-}
-
 .place-items-center {
   place-items: center;
-}
-
-.content-center {
-  align-content: center;
 }
 
 .items-start {
@@ -1207,10 +997,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .gap-y-5 {
@@ -1277,28 +1063,16 @@ video {
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
-.space-y-14 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-16 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(4rem * var(--tw-space-y-reverse));
-}
-
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-14 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-auto {
@@ -1333,17 +1107,16 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-t-full {
-  border-top-left-radius: 9999px;
-  border-top-right-radius: 9999px;
-}
-
 .border {
   border-width: 1px;
 }
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-4 {
+  border-width: 4px;
 }
 
 .border-b-2 {
@@ -1356,18 +1129,6 @@ video {
 
 .border-t {
   border-top-width: 1px;
-}
-
-.border-t-2 {
-  border-top-width: 2px;
-}
-
-.border-t-8 {
-  border-top-width: 8px;
-}
-
-.border-l {
-  border-left-width: 1px;
 }
 
 .border-solid {
@@ -1406,49 +1167,9 @@ video {
   border-color: transparent;
 }
 
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgba(0, 0, 0, var(--tw-border-opacity));
-}
-
-.border-pink-500 {
-  --tw-border-opacity: 1;
-  border-color: rgba(236, 72, 153, var(--tw-border-opacity));
-}
-
-.border-blue-500 {
-  --tw-border-opacity: 1;
-  border-color: rgba(59, 130, 246, var(--tw-border-opacity));
-}
-
-.border-blue-400 {
-  --tw-border-opacity: 1;
-  border-color: rgba(96, 165, 250, var(--tw-border-opacity));
-}
-
-.border-indigo-600 {
-  --tw-border-opacity: 1;
-  border-color: rgba(79, 70, 229, var(--tw-border-opacity));
-}
-
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
-}
-
-.border-pink-800 {
-  --tw-border-opacity: 1;
-  border-color: rgba(157, 23, 77, var(--tw-border-opacity));
 }
 
 .border-gray-400 {
@@ -1456,19 +1177,9 @@ video {
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 
-.border-gray-700 {
+.border-gray-500 {
   --tw-border-opacity: 1;
-  border-color: rgba(55, 65, 81, var(--tw-border-opacity));
-}
-
-.border-t-indigo-600 {
-  --tw-border-opacity: 1;
-  border-top-color: rgba(79, 70, 229, var(--tw-border-opacity));
-}
-
-.border-t-yellow-600 {
-  --tw-border-opacity: 1;
-  border-top-color: rgba(217, 119, 6, var(--tw-border-opacity));
+  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 
 .border-t-yellow-500 {
@@ -1505,57 +1216,18 @@ video {
   background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
 
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-
-.bg-yellow-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
-}
-
-.bg-yellow-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
-}
-
-.bg-pink-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(219, 39, 119, var(--tw-bg-opacity));
-}
-
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
-}
-
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
-}
-
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .from-logo-pink {
@@ -1563,21 +1235,8 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(255, 15, 123, 0));
 }
 
-.from-yellow-400 {
-  --tw-gradient-from: #fbbf24;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(251, 191, 36, 0));
-}
-
 .to-logo-orange {
   --tw-gradient-to: #F89B29;
-}
-
-.to-red-600 {
-  --tw-gradient-to: #dc2626;
-}
-
-.bg-clip-border {
-  background-clip: border-box;
 }
 
 .bg-clip-text {
@@ -1589,24 +1248,8 @@ video {
   fill: currentColor;
 }
 
-.stroke-2 {
-  stroke-width: 2;
-}
-
 .p-3 {
   padding: 0.75rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .px-6 {
@@ -1654,6 +1297,11 @@ video {
   padding-right: 2rem;
 }
 
+.px-\[12\%\] {
+  padding-left: 12%;
+  padding-right: 12%;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1669,49 +1317,14 @@ video {
   padding-right: 5rem;
 }
 
-.px-40 {
-  padding-left: 10rem;
-  padding-right: 10rem;
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
-.px-56 {
-  padding-left: 14rem;
-  padding-right: 14rem;
-}
-
-.px-52 {
-  padding-left: 13rem;
-  padding-right: 13rem;
-}
-
-.px-\[\] {
-  padding-left: ;
-  padding-right: ;
-}
-
-.px-\[50\%\] {
-  padding-left: 50%;
-  padding-right: 50%;
-}
-
-.px-\[20\%\] {
-  padding-left: 20%;
-  padding-right: 20%;
-}
-
-.px-\[15\%\] {
-  padding-left: 15%;
-  padding-right: 15%;
-}
-
-.px-\[10\%\] {
-  padding-left: 10%;
-  padding-right: 10%;
-}
-
-.px-\[12\%\] {
-  padding-left: 12%;
-  padding-right: 12%;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .py-10 {
@@ -1719,9 +1332,19 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
 }
 
 .pl-2 {
@@ -1772,6 +1395,10 @@ video {
   padding-right: 0.5rem;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .pt-12 {
   padding-top: 3rem;
 }
@@ -1820,6 +1447,10 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -1832,140 +1463,28 @@ video {
   padding-left: 1.25rem;
 }
 
-.pt-14 {
-  padding-top: 3.5rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pt-\[4\.5rem\] {
-  padding-top: 4.5rem;
-}
-
-.pt-\[4\.2rem\] {
-  padding-top: 4.2rem;
-}
-
-.pt-\[4\.3rem\] {
-  padding-top: 4.3rem;
-}
-
-.pb-7 {
-  padding-bottom: 1.75rem;
-}
-
-.pb-11 {
-  padding-bottom: 2.75rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
-}
-
-.pb-\[2\.8rem\] {
-  padding-bottom: 2.8rem;
-}
-
-.pb-\[2\.78rem\] {
-  padding-bottom: 2.78rem;
-}
-
-.pb-\[2\.75rem\] {
-  padding-bottom: 2.75rem;
-}
-
-.pb-\[2\.2rem\] {
-  padding-bottom: 2.2rem;
-}
-
-.pb-\[2\.7rem\] {
-  padding-bottom: 2.7rem;
-}
-
-.pb-\[3rem\] {
-  padding-bottom: 3rem;
-}
-
-.pb-\[3\.2rem\] {
-  padding-bottom: 3.2rem;
-}
-
-.pb-\[4rem\] {
-  padding-bottom: 4rem;
-}
-
-.pb-\[3\.5rem\] {
-  padding-bottom: 3.5rem;
-}
-
-.pb-\[3\.1rem\] {
-  padding-bottom: 3.1rem;
-}
-
-.pb-\[3\.05rem\] {
-  padding-bottom: 3.05rem;
-}
-
-.pb-\[3\.0rem\] {
-  padding-bottom: 3.0rem;
-}
-
-.pb-\[2\.9rem\] {
-  padding-bottom: 2.9rem;
-}
-
-.pb-\[2\.95rem\] {
-  padding-bottom: 2.95rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
 .pl-10 {
   padding-left: 2.5rem;
 }
 
-.pt-\[100px\] {
-  padding-top: 100px;
+.pl-12 {
+  padding-left: 3rem;
 }
 
-.pt-\[-100px\] {
-  padding-top: -100px;
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .pr-10 {
   padding-right: 2.5rem;
 }
 
-.pt-\[5rem\] {
-  padding-top: 5rem;
+.pr-3 {
+  padding-right: 0.75rem;
 }
 
-.pt-\[4rem\] {
-  padding-top: 4rem;
-}
-
-.pt-\[3rem\] {
-  padding-top: 3rem;
-}
-
-.pt-\[3\.5rem\] {
-  padding-top: 3.5rem;
-}
-
-.pl-7 {
-  padding-left: 1.75rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
 .text-left {
@@ -1998,6 +1517,11 @@ video {
   font-size: 48px;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -2008,19 +1532,9 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .font-semibold {
@@ -2037,6 +1551,14 @@ video {
 
 .font-medium {
   font-weight: 500;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.normal-nums {
+  font-variant-numeric: normal;
 }
 
 .text-transparent {
@@ -2098,24 +1620,14 @@ video {
   color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
 
-.text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
-
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
-.text-gray-100 {
+.text-yellow-400 {
   --tw-text-opacity: 1;
-  color: rgba(243, 244, 246, var(--tw-text-opacity));
+  color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
 .underline {
@@ -2306,9 +1818,9 @@ video {
   border-color: transparent;
 }
 
-.dark .dark\:border-\[\#555555\] {
+.dark .dark\:border-gray-600 {
   --tw-border-opacity: 1;
-  border-color: rgba(85, 85, 85, var(--tw-border-opacity));
+  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-gray-400 {
@@ -2316,19 +1828,9 @@ video {
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 
-.dark .dark\:border-gray-500 {
+.dark .dark\:border-\[\#555555\] {
   --tw-border-opacity: 1;
-  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-gray-700 {
-  --tw-border-opacity: 1;
-  border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+  border-color: rgba(85, 85, 85, var(--tw-border-opacity));
 }
 
 .dark .dark\:bg-\[\#1E1E1E\] {
@@ -2405,9 +1907,9 @@ video {
   color: rgba(245, 158, 11, var(--tw-text-opacity));
 }
 
-.dark .dark\:text-gray-500 {
+.dark .dark\:text-yellow-400 {
   --tw-text-opacity: 1;
-  color: rgba(107, 114, 128, var(--tw-text-opacity));
+  color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
 .dark .dark\:shadow {
@@ -2572,64 +2074,12 @@ video {
     display: none;
   }
 
-  .lg\:h-16 {
-    height: 4rem;
-  }
-
-  .lg\:h-\[13rem\] {
-    height: 13rem;
-  }
-
-  .lg\:h-\[13\%\] {
-    height: 13%;
-  }
-
-  .lg\:h-\[100\%\] {
-    height: 100%;
-  }
-
-  .lg\:h-\[90\%\] {
-    height: 90%;
-  }
-
   .lg\:w-\[30rem\] {
     width: 30rem;
   }
 
   .lg\:w-\[10rem\] {
     width: 10rem;
-  }
-
-  .lg\:w-48 {
-    width: 12rem;
-  }
-
-  .lg\:w-96 {
-    width: 24rem;
-  }
-
-  .lg\:w-\[1000px\] {
-    width: 1000px;
-  }
-
-  .lg\:w-\[2000px\] {
-    width: 2000px;
-  }
-
-  .lg\:w-\[100rem\] {
-    width: 100rem;
-  }
-
-  .lg\:w-\[50rem\] {
-    width: 50rem;
-  }
-
-  .lg\:w-\[70rem\] {
-    width: 70rem;
-  }
-
-  .lg\:w-\[80rem\] {
-    width: 80rem;
   }
 
   .lg\:scale-100 {
@@ -2696,14 +2146,6 @@ video {
     padding-top: 1.5rem;
   }
 
-  .lg\:pb-\[3\.2rem\] {
-    padding-bottom: 3.2rem;
-  }
-
-  .lg\:pb-\[3\.3rem\] {
-    padding-bottom: 3.3rem;
-  }
-
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -2729,6 +2171,18 @@ video {
 
   .xl\:w-\[55rem\] {
     width: 55rem;
+  }
+
+  .xl\:w-\[30rem\] {
+    width: 30rem;
+  }
+
+  .xl\:w-\[60rem\] {
+    width: 60rem;
+  }
+
+  .xl\:w-\[63rem\] {
+    width: 63rem;
   }
 
   .xl\:max-w-\[61rem\] {
